# auto_turner

./: README.md
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/example/auto_turner/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/auto_turner/: AllWatcher.java  Comparator.java  FFTClient.java  MainActivity.java  MaxWatcher.java  MelodyAnalyser.java  MicRecorder.java  MinWatcher.java  MusicSheet.java  MusicSheetCreator.java  Note.java  Rule.java  SheetAnalyser.java  SocketAdapter.java
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/com/example/auto_turner/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
server/: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
server/app/: __init__.py  recordHtml.py  test_sheet.json
server/app/checker/: __init__.py
server/app/constants/: __init__.py
server/app/parser/: __init__.py
server/app/stft/: __init__.py
