[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "auto_turner"
authors = [{name = "camp_1", email = "dltmdcks702@cau.ac.kr"}]
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.8"
dependencies = [
  "fastapi",
  "uvicorn",
  "matlab",
  "numpy",
  "matplotlib"
]